# FileHistoryTool

./: Cargo.toml  LICENSE  README.md
src/: file_journal.rs  main.rs  path_walker.rs
testPaths/thread1/: file1.txt  file2.txt
testPaths/thread2/: file1.txt  file2.txt
