[package]
name = "new"
version = "0.1.0"
authors = ["Pasi Luostarinen <pasi.luostarinen@serv.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
joinery = "2.0.0"
sha2 = "0.9.3"
regex = "1"
lazy_static = "1.4.0"
